--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,9 +12,12 @@ build_extension:
   artifacts:
     paths:
       - vscode-copilot-code-review-*.vsix
+  only:
+      - tags
 
 release:
   stage: release
+  image: curlimages/curl:latest # Adding a Docker image with curl
   script:
     - |
       curl --request POST --header "PRIVATE-TOKEN: $GITLAB_TOKEN" \
@@ -23,6 +26,6 @@ release:
       --form "description=Automated release for $CI_COMMIT_TAG" \
       --form "assets[links][][name]=VSIX File" \
       --form "assets[links][][url]=$CI_PROJECT_URL/-/jobs/$CI_JOB_ID/artifacts/raw/vscode-copilot-code-review-0.2.1.vsix" \
-      "https://gitlab.com/api/v4/projects/$CI_PROJECT_ID/releases"
+      "https://gitlab.actech.cambridge.org/api/v4/projects/$CI_PROJECT_ID/releases"
   only:
     - tags
